--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,31 +9,29 @@ environment:
   sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
-
-
-  #aqui agrego todas las dependencias
-  http: ^1.1.0
-  sqflite: ^2.3.0
-  path: ^1.8.3
-  infinite_scroll_pagination: ^4.0.0
-  # para el date
-  intl: ^0.18.1
+  font_awesome_flutter: ^10.6.0
+  formz: ^0.6.1
   go_router: ^12.0.0
+  http: ^1.1.0
+  infinite_scroll_pagination: ^4.0.0
+  intl: ^0.18.1
+  path: ^1.8.3
+  sqflite: ^2.3.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/  # Ruta a la carpeta de assets de imagenes
+    - assets/ # Ruta a la carpeta de assets de imagenes
