--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   go_router: ^12.0.0
   http: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
-  intl: ^0.18.1
+  intl: 0.19.0
   path: ^1.8.3
   sqflite: ^2.3.0
 
