--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
   intl: 0.19.0
+  mobile_scanner: ^5.1.1
   path: ^1.8.3
   sqflite: ^2.3.0
 
