--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   path: ^1.8.3
   sqflite: ^2.3.0
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
