--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   formz: ^0.6.1
   go_router: ^12.0.0
+  google_maps_flutter: ^2.7.0
   http: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
   intl: 0.19.0
@@ -28,9 +29,15 @@ dependencies:
   web_socket_channel: ^3.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: 'assets/TheBigFun.png'
 
 flutter:
   uses-material-design: true
